<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/gohan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/gohan"
                android:gravity="bottom" />

            <RadioButton
                android:id="@+id/piccolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/piccolo"
                android:gravity="bottom" />

            <RadioButton
                android:id="@+id/trunks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/trunks"
                android:gravity="bottom" />

            <RadioButton
                android:id="@+id/vegeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/vegeta"
                android:gravity="bottom" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/attack_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/answer_here" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/gohan_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Son Gohan"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/goku_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Son Goku"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/trunks_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trunks"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/videl_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Videl"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/yamcha_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yamcha"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/popo_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Popo"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/krillin_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Krillin"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/author_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/answer_here" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="displayScore"
            android:text="@string/reveal_core" />
    </LinearLayout>
</ScrollView>